[package]
name = "org_demo"
version = "0.1.0"
authors = ["James Kominick <james.kominick@gmail.com>"]

[dependencies]
rouille = "2"
error-chain = "0.11"
clap = "2"
env_logger = "0.5"
log = "0.4"
chrono = "0.4"
migrant_lib = { version = "0.18", features = ["d-sqlite"] }
rusqlite = { version = "0.13", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.5"
serde = "1"
serde_derive = "1"
serde_json = "1"

